@@ -95,6 +95,7 @@ public:
     std::experimental::optional<RegexStr> keysInactive; // Which keymask rule should be applied for this client
 
     std::experimental::optional<bool> floating;
+    std::experimental::optional<Rectangle> floatingGeometry;
     std::experimental::optional<bool> pseudotile;
     std::experimental::optional<bool> ewmhRequests;
     std::experimental::optional<bool> ewmhNotify;
@@ -122,6 +123,7 @@ private:
     void applyIndex(const Client* client, ClientChanges* changes) const;
     void applyHook(const Client* client, ClientChanges* changes) const;
     void applyMonitor(const Client* client, ClientChanges* changes) const;
+    static Consequence::Applier parseFloatingGeometry(const std::string&);
 };
 
 class Rule {
