@@ -1,4 +1,5 @@
 import pytest
+from herbstluftwm.types import Rectangle
 
 
 string_props = [
@@ -23,6 +24,7 @@ consequences = [
     'manage',
     'index',
     'floating',
+    'floating_geometry',
     'pseudotile',
     'ewmhrequests',
     'ewmhnotify',
@@ -321,6 +323,8 @@ def test_condition_class(hlwm):
     ("fullscreen=foo", 'only.*are valid booleans'),
     ("keymask=(", 'Parenthesis is not closed'),
     ("floatplacement=bar", 'Expecting one of: center, '),
+    ("floating_geometry=4x5+1024+1024", 'Rectangle too small'),
+    ("floating_geometry=totallywrong", 'Rectangle too small'),  # TODO: make rectangle parsing fail
 ])
 @pytest.mark.parametrize('command', ['rule', 'apply_tmp_rule'])
 def test_consequence_parse_error_correct_error_message(hlwm, command, rulearg, errormsg):
@@ -963,3 +967,33 @@ def test_smart_placement_within_monitor(hlwm):
     # is still within the monitor
     assert inner_geometry.x - bw >= 0
     assert inner_geometry.y - bw >= 0
+
+
+@pytest.mark.parametrize('command', ['rule', 'apply_rules', 'apply_tmp_rule'])
+@pytest.mark.parametrize('visible_tag', [True, False])
+def test_floating_geometry(hlwm, x11, command, visible_tag):
+    if command != 'rule':
+        _, winid = x11.create_client()  # client first
+
+    geo = Rectangle(30, 40, 140, 170)
+    rule = ['floating=on', 'focus=on', 'floating_geometry=' + geo.to_user_str()]
+
+    if not visible_tag:
+        hlwm.call('add othertag')
+        rule += ['tag=othertag']
+
+    if command == 'rule':
+        hlwm.call(['rule'] + rule)
+        _, winid = x11.create_client()  # client second
+    elif command == 'apply_rules':
+        # apply fresh rules to long existing client
+        hlwm.call(['rule'] + rule)
+        hlwm.call(['apply_rules', winid])
+    else:
+        hlwm.call(['apply_tmp_rule', winid] + rule)
+
+    if not visible_tag:
+        hlwm.call('use othertag')
+
+    assert hlwm.attr.clients.focus.floating_geometry() == geo
+    assert hlwm.attr.clients.focus.content_geometry() == geo
